--- a/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
@@ -10,9 +10,9 @@
     <div>
       <input type="number" name="minimumSubscribers" placeholder="Minimum subscribers" {% if request.GET.minimumSubscribers %} value="{{ request.GET.minimumSubscribers }}" {% endif %}/>
       <select name="channelType">
-        <option value="default">SiIvaGunner and fan channels</option>
+        <option value="all">All channels</option>
+        <option value="derivative" {% if request.GET.channelType == 'derivative' %} selected {% endif %}>SiIvaGunner and fan channels</option>
         <option value="original" {% if request.GET.channelType == 'original' %} selected {% endif %}>SiIvaGunner channels</option>
-        <option value="all" {% if request.GET.channelType == 'all' %} selected {% endif %}>All channels</option>
       </select>
     </div>
     <div>
