--- a/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoDetails.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoDetails.html
@@ -7,7 +7,11 @@
       <a class="smallText" href="https://web.archive.org/web/*/https://www.youtube.com/watch?v={{ video.id }}" target="_blank">
         <img src="{% static 'Internet_Archive_icon.svg' %}" alt="Internet Archive icon" decoding="async" loading="lazy" width="25" height="25" />
       </a>
-      {% if video.channel is not None and video.channel.wiki != "" %}
+      {% if video.channel is not None and video.channel.wiki != "" and "https" in video.channel.wiki %}
+        <a class="smallText" href="{{ video.channel.wiki }}/wiki/{{ video.title }}" target="_blank">
+          <img src="{% static '90px-Meme_icon.svg.png' %}" alt="Wiki icon" decoding="async" loading="lazy" height="25" />
+        </a>
+      {% elif video.channel.wiki != "" %}
         <a class="smallText" href="https://{{ video.channel.wiki }}.fandom.com/wiki/{{ video.title }}" target="_blank">
           <img src="{% static 'Fandom_icon.png' %}" alt="Fandom icon" decoding="async" loading="lazy" height="25" />
         </a>
